--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   url_launcher: ^6.1.13
   flutter_easyloading: ^3.0.5
   flutter_email_sender: ^6.0.1
+  gap: ^3.0.1
+  flutter_screenutil: ^5.9.0
   
 
 dev_dependencies:
