--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_email_sender: ^6.0.1
   gap: ^3.0.1
   flutter_screenutil: ^5.9.0
+  confetti: ^0.8.0
   
 
 dev_dependencies:
