--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_screenutil: ^5.9.0
   confetti: ^0.8.0
   flutter_confetti: ^0.3.4
+  flutter_onboarding_slider: ^1.0.11
+  lottie: ^3.1.3
   
 
 dev_dependencies:
@@ -72,6 +74,7 @@ flutter:
     - assets/champ.png
     - assets/quiz.png
     - assets/exc.png
+    - assets/lottie/onboardanim1.json
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
