--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   flutter_confetti: ^0.3.4
   flutter_onboarding_slider: ^1.0.11
   lottie: ^3.1.3
+  animated_countdown: ^0.0.3
+  flutter_animate: ^4.5.0
   
 
 dev_dependencies:
