--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   lottie: ^3.1.3
   animated_countdown: ^0.0.3
   flutter_animate: ^4.5.0
+  device_preview: ^1.2.0
   
 
 dev_dependencies:
